@@ -10,12 +10,9 @@ import dev.screwbox.core.environment.ExecutionOrder;
 import dev.screwbox.core.environment.physics.PhysicsComponent;
 import dev.screwbox.core.environment.softphysics.SoftBodyComponent;
 import dev.screwbox.core.environment.softphysics.SoftLinkComponent;
-import dev.screwbox.core.graphics.Color;
-import dev.screwbox.core.graphics.options.LineDrawOptions;
 import dev.screwbox.core.keyboard.Key;
 
 import static dev.screwbox.core.environment.Order.SIMULATION_LATE;
-import static dev.screwbox.core.environment.Order.SIMULATION_PREPARE;
 
 @ExecutionOrder(SIMULATION_LATE)
 public class SoftBodyPreasureSystem implements EntitySystem {
@@ -26,23 +23,22 @@ public class SoftBodyPreasureSystem implements EntitySystem {
     public void update(Engine engine) {
 
         for (final var body : engine.environment().fetchAll(BODIES)) {
-            if(engine.keyboard().isDown(Key.T)) {
-                body.get(SoftBodyPreasureComponent.class).preasure -=200;
+            if (engine.keyboard().isDown(Key.T)) {
+                body.get(SoftBodyPreasureComponent.class).preasure -= 200;
             }
-            if(engine.keyboard().isDown(Key.Z)) {
-                body.get(SoftBodyPreasureComponent.class).preasure +=200;
+            if (engine.keyboard().isDown(Key.Z)) {
+                body.get(SoftBodyPreasureComponent.class).preasure += 200;
             }
             var polygon = toPolygon(body);
             var c = body.get(SoftBodyComponent.class);
             Vector sum = Vector.zero();
-            for(int i = 0; i < polygon.nodes().size(); i++) {
+            for (int i = 0; i < polygon.nodes().size(); i++) {
                 Entity entity = c.nodes.get(i);
                 var delta = polygon.center().substract(entity.position()).length(1).multiply(-engine.loop().delta() * body.get(SoftBodyPreasureComponent.class).preasure);
                 sum = sum.add(delta);
-            //    engine.graphics().world().drawLine(entity.position(), entity.position().add(delta), LineDrawOptions.color(Color.MAGENTA).strokeWidth(3));
                 entity.get(PhysicsComponent.class).velocity = entity.get(PhysicsComponent.class).velocity.add(delta);
             }
-            Entity entity = c.nodes.get(0);
+            Entity entity = c.nodes.getFirst();
             entity.get(PhysicsComponent.class).velocity = entity.get(PhysicsComponent.class).velocity.add(sum.invert());
         }
     }
